This is a bit clumsy commit, I know.. it's mostly tracing but also mock_as for testing, as well as some bug fixes.
